devops-service.yml
apiVersion: 'v1'
kind: Service
metadata:
  name: devops
  namespace: devops
spec:
  selector:
    app: devops
    releases: production
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 5000
